# numcuda

./: .gitignore  CMakeLists.txt  README.md  env.setup  env_setup.source
include/: cudaArray.h  kernel.h  util.h
python/: numcuda.py
src/: numcuda.cpp  util.cpp
src/kernel/: binaryop.cu  fill.cu
tests/python/: test01.py  test02.py  test03.py
